fix homepage on mobile

--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -19,6 +19,10 @@ ul {
   @include landscape() {
     height: auto;
   }
+
+  @include phone-down() {
+    height: auto;
+  }
 }
 
 .embed-container {
